feat: update TalentPredict latest changes